# fanspeedcontrol

./: CMakeLists.txt  README.md
cmake/: FindNVCtrl.cmake
src/fanspeedcontrol/: main.cpp
src/fanspeedcontrol/config/: ArgsAndConfigProcessor.cpp  ArgsAndConfigProcessor.h
src/fanspeedcontrol/devices/: AbstractDevice.cpp  AbstractDevice.h  NvidiaGpu.cpp  NvidiaGpu.h
src/fanspeedcontrol/locale/: de.po  en.po  fanspeedcontrol.po
src/fanspeedcontrol/observers/: LoggerObserver.cpp  LoggerObserver.h  NotifyObserver.cpp  NotifyObserver.h  SharedStrings.h  SoundObserver.cpp  SoundObserver.h
src/patterns/observer/: AbstractObserver.cpp  AbstractObserver.h  Observable.cpp  Observable.h
